--- a/webgl/01_HelloWebGL.html
+++ b/webgl/01_HelloWebGL.html
@@ -1,3 +1,28 @@
 <!DOCTYPE html>
 
+<head>
+    <title>Hello, WebGL</title>
+    
+    <!-- <script src="webgl_utils.js" type="text/javascript"></script> -->
+    <!-- <script src="matrix_utils.js" type="text/javascript"></script> -->
+    <script id="vertex-shader" type="x-shader/x-vertex">
+        attribute vec3 pos;
+        attribute vec3 color;
+        varying vec3 out_color;
+        void main() {
+            gl_Position = vec4(pos, 1.0);
+            out_color = color;
+        }
+    </script>
+    <script id="fragment-shader" type="x-shader/x-fragment">
+        varying vec4 out_color;
+        void main(){
+            gl_FragColor = vec4(out_color, 1.0);
+        }
+    </script>
+</head>
+<body onload="main();">
+    <canvas id="my_canvas" width="800" height="600"></canvas>
+    <script src="01_HelloWebGL.js" type="text/javascript"></script>
+</body>
 </html>
