--- a/webgl/01_HelloWebGL.html
+++ b/webgl/01_HelloWebGL.html
@@ -10,8 +10,9 @@
         attribute lowp vec3 pos;
         attribute lowp vec3 color;
         varying vec3 out_color;
+        uniform mat4 mvp;
         void main() {
-            gl_Position = vec4(pos, 1.0);
+            gl_Position = mvp * vec4(pos, 1.0);
             out_color = color;
         }
     </script>
